<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    tools:context=".ui.FragmentAddPath"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <TextView
          android:id="@+id/requestedLine"
          android:layout_width="100dp"
          android:layout_height="100dp"
          android:layout_gravity="center"
          android:layout_margin="12dp"
          android:gravity="center"
          android:textSize="36sp"
          android:textStyle="bold" />

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputBusStop1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HINT_busStop1"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences" />

      </com.google.android.material.textfield.TextInputLayout>

      <CheckBox
          android:id="@+id/chooseEndpoint"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:layout_marginEnd="12dp" />

      <ProgressBar
          android:id="@+id/progressBar"
          android:layout_width="56dp"
          android:layout_height="56dp"
          android:layout_gravity="center_horizontal"
          android:visibility="gone" />

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="12dp"
          android:layout_marginTop="32dp"
          android:layout_marginEnd="12dp"
          android:layout_marginBottom="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputBusStop2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/HINT_busStop2"
            android:imeOptions="actionDone"
            android:inputType="textCapSentences" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.button.MaterialButton
          android:id="@+id/buttonNext"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_margin="12dp"
          android:backgroundTint="@color/colorAccent"
          android:text="@string/validate" />

    </LinearLayout>
  </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>