<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/MAIN_coordinator"
    android:background="@color/colorPrimaryLight"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        app:layout_behavior="com.louis.app.ginkorealtimewidget.FloatingActionButtonBehavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/MAIN_linearWrapperBouton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="fill_parent"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="bottom"
                android:backgroundTint="@color/colorAccent"
                android:textColor="#FEFEF2"
                android:text="@string/next" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/MAIN_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/MAIN_linearWrapperBouton" >

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >


                <TextView
                    android:id="@+id/MAIN_indication"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/hint1" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    app:cardElevation="3dp">

                    <LinearLayout
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:focusableInTouchMode="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:hint="@string/HINT_lineDirection">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/MAIN_entrerLigne"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textCapSentences"
                                android:singleLine="true"
                                android:imeOptions="actionDone"
                                android:paddingStart="12dp"
                                android:paddingEnd="8dp"
                                android:completionThreshold="1" />

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>